Changes in 1.0.18:
  o Bugs Fixed:
    * Server code returns an error to a client when committing
      duplicate troves with empty flavor strings (CNY-476)

  o Client Changes:
    * Trying to shadow a cooked redirect now results in an error (CNY-447)
    * Added --keep-required option to tell conary to leave troves installed
      when removing them would break dependencies. This used to be the
      default behaviour; conary now issues a dependency error instead (CNY-6).
    * Added delete-entitlement and list-entitlements to manageents script
    * Fixed list-groups in manageents to list the groups the user can
      manage instead of the groups that user belongs to

  o Server Changes:
    * Added support for deleting entitlements, listing the entitlement
      groups a user can manage, and removing the acl which lets a group
      manage an entitlement group group

Changes in 1.0.17:
  o Client Changes:
    * Individual file removals performed by "conary remove" now create
      rollbacks. (CNY-7)
    * The repository mirroring client supports two new configuration
      options:
      - matchTroves is a regexp list that limits what troves will be
        mirrored based on the trove names;
      - recurseGroups takes a boolean value (True/False) which will
        cause the miror client to recurse through a groups and mirror
        everything that they include into the target repository.

  o Server Changes:
    * A single conary repository can host multiple serverNames. In the
      Conary repository's configuration file, the serverName directive
      can now specify a space separated list of valid server names
      which will be accepted and served from that repository. (CNY-16)

Changes in 1.0.16
  o Build Changes:
    * A check has been added to "cvc commit" that ensures a .recipe
      file exists in the CONARY state file.
    * Recipe classes can now set an "abstractBaseClass" class