@@ -2,6 +2,9 @@ Changes in 1.0.18:
   o Bugs Fixed:
     * Server code returns an error to a client when committing
       duplicate troves with empty flavor strings (CNY-476)
+    * When checking out a source trove from a repository using "cvc checkout"
+      the  user is no longer warned about not being able to change the 
+      ownership of the files checked out.
 
   o Client Changes:
     * Trying to shadow a cooked redirect now results in an error (CNY-447)
